--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Box Model Demo</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <div id="box-model-demo">
+        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+    </div>
 
 </body>
-
 </html>
