--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="box-model-demo">
-        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+        This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
     </div>
 
 </body>
